--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form action="POST">
+		<label for="name">Enter your name:</label>
+		<br>
+		<input id="name" type="text" minlength="3" maxlength="50" required>
+		<br>
+		<label for="portfolio">Enter your portfolio url:</label>
+		<br>
+		<input id="portfolio" type="url" required>
+		<br>
+		<label for="favColor">Enter your favorite color:</label>
+		<br>
+		<input id="favColor" type="color">
+		<br>
+		<label for="likeness">Select your likeness:</label>
+		<br>
+		<input id="likeness" type="range" min="1" max="100">
+		<br>
+		<button type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
