--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
-	<form action="POST">
+	<form method="post">
 		<label for="name">Enter your name:</label>
 		<br>
 		<input id="name" type="text" minlength="3" maxlength="50" required>
